FIX Gap variable

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -169,7 +169,7 @@
     /* Auto-grid | 🔗5 */
     --grid-max-col-count: 3;
     --grid-min-col-size: 240px;
-    --grid-gap: var(--spacing-largesmall); /* 🔗3 */   
+    --grid-gap: var(--spacing-small); /* 🔗3 */   
 
     
     /* |.... STYLES */
@@ -887,6 +887,7 @@ section.hero-banner {
 .flow > * + * {
   margin-top: var(--flow-spacing, 1em);
 }
+
 
 /* =================================================
 || LAYOUT */
